fix bug with sidebar full collapse hover

--- a/chrome/browser/sidebar.css
+++ b/chrome/browser/sidebar.css
@@ -100,7 +100,7 @@
                     will-change: auto !important;
                     transition: margin var(--uc-transition) !important;
                     
-                    margin-left: calc(-1 * (var(--uc-sidebar-hover-width) + var(--uc-content-margin))) !important;
+                    margin-left: calc(-1 * (var(--uc-sidebar-hover-width) + var(--uc-content-margin-left))) !important;
                     margin-block: var(--uc-sidebar-margin) !important;
                     min-width: var(--uc-sidebar-hover-width) !important;
                     max-width: var(--uc-sidebar-hover-width) !important;
@@ -123,6 +123,18 @@
                 &[positionend="true"]:hover #sidebar, 
                 &[positionend="true"]:hover #sidebar-header {
                     margin-right: calc(var(--uc-content-margin) + var(--uc-sidebar-margin)) !important;
+                }
+                
+                &:hover::after {
+                    content: "";
+                    position: absolute !important;
+                    top: 0 !important;
+                    bottom: 0 !important;
+                    left: 0 !important;
+                    right: calc(-1 * var(--uc-sidebar-margin)*2) !important;
+                    width: auto;
+                    height: auto;
+                    z-index: 90 !important;
                 }
                 
                 &:hover::before {
